@@ -1,5 +1,7 @@
-#include "gdcmlib.h"
+#include "gdcm.h"
 
-gdcmFile::gdcmFile(string & filename) {
+gdcmFile::gdcmFile(string & filename)
+	:gdcmHeader(filename.c_str())
+{
 	
 }
